--- a/Pizzeria/Views/Management/Index.cshtml
+++ b/Pizzeria/Views/Management/Index.cshtml
@@ -43,7 +43,7 @@
                                 @if(@order.deliverer == null)
                                 {
                                     <div class="pull-right" style="vertical-align:central;margin-top:20px;">
-                                        <a href="@Url.Action("DeleteOrder", "Managment", new { id = @order.id })" class="btn btn-default" >Delete</a>
+                                        <a href="@Url.Action("DeleteOrder", "Management", new { id = @order.id })" class="btn btn-default" >Delete</a>
                                     </div>
                                 }
                             </div>
@@ -120,13 +120,13 @@
                                     @if (deliverer.available)
                                     {
                                         <span class="pull-right" style="vertical-align:central;">
-                                            <a href="#deleteGenreModal" data-toggle="modal" class="btn btn-default">Unavailabele</a>
+                                            <a href="/Management/ChangeDelivererStatus?id=@deliverer.id&available=false" class="btn btn-default">Unavailable</a>
                                         </span>
                                     }
                                     else
                                     {
                                         <div class="pull-right" style="vertical-align:central;">
-                                            <a href="#deleteGenreModal" data-toggle="modal" class="btn btn-default">Availabele</a>
+                                            <a href="/Management/ChangeDelivererStatus?id=@deliverer.id&available=true" class="btn btn-default">Available</a>
                                         </div>
                                     }
                                 </div>
@@ -151,7 +151,7 @@
                                                         @if (@order.deliverer == null)
                                                         {
                                                         <div class="pull-right" style="vertical-align:central;margin-top:20px;margin-right:5px;">
-                                                            <a href="#deleteGenreModal" data-toggle="modal" class="btn btn-default">Delete</a>
+                                                            <a href="/Management/MoveOrderToHistory?orderId=@order.id&delivererId=@order.deliverer.id" class="btn btn-default">Delete</a>
                                                         </div>
                                                         }
                                                     </li>
@@ -279,7 +279,7 @@
                     <h4 class="modal-title">Create Deliverer</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal" action="CreateGenre/" method="get">
+                    <form class="form-horizontal" action="/Management/CreateDeliverer" method="get">
                         <fieldset>
                             <div class="form-group">
                                 <label class="col-lg-2 control-label">Name:</label>
