--- a/Pizzeria/Views/Management/Index.cshtml
+++ b/Pizzeria/Views/Management/Index.cshtml
@@ -160,12 +160,9 @@
                                                                 <h4>Price: @order.price</h4>
                                                             </div>
                                                         </div>
-                                                        @if (@order.deliverer == null)
-                                                        {
                                                         <div class="pull-right" style="vertical-align:central;margin-top:20px;margin-right:5px;">
                                                             <a href="/Management/MoveOrderToHistory?orderId=@order.id&delivererId=@order.deliverer.id" class="btn btn-default">Delete</a>
                                                         </div>
-                                                        }
                                                     </li>
                                                 </ul>
                                             }
@@ -206,7 +203,7 @@
                                 </div>
                             </div>
                             <div class="pull-right" style="vertical-align:central;margin-top:20px;">
-                                <a href="#deleteGenreModal" data-toggle="modal" class="btn btn-default">Delete</a>
+                                <a href="/Management/DeleteOrderFromHistory?id=@order.id" class="btn btn-default">Delete</a>
                             </div>
                         </div>
                         <div id="@order.id" class="sublinks collapse">
