--- a/Pizzeria/Views/Management/Index.cshtml
+++ b/Pizzeria/Views/Management/Index.cshtml
@@ -161,7 +161,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="pull-right" style="vertical-align:central;margin-top:20px;margin-right:5px;">
-                                                            <a href="/Management/MoveOrderToHistory?orderId=@order.id&delivererId=@order.deliverer.id" class="btn btn-default">Delete</a>
+                                                            <a href="/Management/MoveOrderToHistory?orderId=@order.id&delivererId=@order.deliverer.id" class="btn btn-default">Deliverd</a>
                                                         </div>
                                                     </li>
                                                 </ul>
